# otel

./: .gitignore  README.md  docker-compose.yaml  tempo.yaml
micro_rs/: Cargo.toml
micro_rs/src/: error.rs  main.rs  otel.rs
