[package]
name = "micro_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
anyhow = "1"
chrono = "0.4"
opentelemetry = { version = "0.22", features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.22", features = ["metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.15", features = [
    "trace",
    "metrics",
    "logs",
] }
opentelemetry-semantic-conventions = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-opentelemetry = "0.23"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-attributes = { version = "0.1", features = ["async-await"] }
dotenv = "0.15.0"
